# xernel

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.sh  gdb.sh  gdb.txt  limine.cfg  out.txt  rust-toolchain  rust-toolchain.toml
xernel/kernel/: Cargo.toml  build.rs  c.sh  limine.cfg  limine.conf  test-elfloader  test-elfloader.c
xernel/kernel/.cargo/: config.toml
xernel/kernel/src/: backtrace.rs  cpu.rs  dpc.rs  gdt.rs  idt.rs  limine_module.rs  main.rs  writer.rs
xernel/kernel/src/acpi/: acpi.rs  hpet.rs  mod.rs
xernel/kernel/src/allocator/: buddy.rs  mod.rs  unit.rs
xernel/kernel/src/arch/: mod.rs
xernel/kernel/src/arch/amd64/: apic.rs  cpuid.rs  gdt.rs  idt.rs  ioapic.rs  ipl.rs  lapic.rs  mod.rs  ports.rs  switch.S  time.rs  tsc.rs
xernel/kernel/src/arch/x64/: apic.rs  gdt.rs  idt.rs  int_thunks.S  interrupt_thunks.asm  mod.rs  ports.rs
xernel/kernel/src/drivers/ps2/: keyboard.rs
xernel/kernel/src/framebuffer/: font.rs  framebuffer.rs  mod.rs
xernel/kernel/src/fs/: error.rs  file.rs  mod.rs  mount.rs  mountpoint.rs  pathbuf.rs  ramfs.rs  tmpfs.rs  vfs.rs  vfs_syscalls.rs  vnode.rs
xernel/kernel/src/mem/: frame.rs  heap.rs  mmap.rs  mod.rs  paging.rs  pm.rs  pmm.rs  vm.rs  vmm.rs
xernel/kernel/src/sched/: context.rs  mod.rs  process.rs  scheduler.rs  task.rs  thread.rs
xernel/kernel/src/syscall/: mod.rs  syscall.rs
xernel/kernel/src/time/: dispatcher.rs  event.rs  event_queue.rs  mod.rs
xernel/kernel/src/timer/: mod.rs  timer_event.rs  timer_queue.rs
xernel/kernel/src/timer_queue/: mod.rs  timer_event.rs  timer_queue.rs
xernel/kernel/src/utils/: backtrace.rs  defer.rs  logger.rs  mod.rs  rtc.rs  writer.rs
(+96 files in other folders)
