[package]
name = "xernel"
version = "0.1.0"
authors = ["Raphael O. <raphael.ob@protonmail.com"]
description = ""
edition = "2021"
repository = "https://github.com/anubis-rs/xernel"
license = ""

[dependencies]
limine = "0.1.8"
x86_64 = "0.14.10"
volatile = "0.4.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}
libxernel = { path = "../../crates/libxernel" }
