[package]
name = "xernel"
version = "0.1.0"
authors = ["Raphael O. <raphael.ob@protonmail.com"]
description = ""
edition = "2021"
repository = "https://github.com/anubis-rs/xernel"
license = "MIT OR Apache-2.0"

[dependencies]
limine = "0.1.9"
x86_64 = "0.14.10"
acpi_parsing = { package = "acpi", version = "4.1.1" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}
libxernel = { path = "../../crates/libxernel", features = ["kernel"] }
linked_list_allocator = { version = "0.10.3", features = [] }