[package]
name = "xernel"
version = "0.1.0"
authors = ["Raphael O. <raphael.ob@protonmail.com"]
description = ""
edition = "2021"
repository = "https://github.com/anubis-rs/xernel"
license = "MIT OR Apache-2.0"

[dependencies]
limine = "0.1.12" 
x86_64 = { git = "https://github.com/rust-osdev/x86_64" }
acpi_parsing = { package = "acpi", version = "4.1.1" }
libxernel = { path = "../../crates/libxernel", features = ["kernel"] }
linked_list_allocator = { version = "0.10.3", features = [] }
paste = "1.0.14"
seq-macro = "0.3.5"
elf = { version="0.7.4", features = ["nightly"], default-features = false}
